--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "NODE_ENV=DEV vue-cli-service serve & sleep 5 && NODE_ENV=DEV electron app.js",
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "electron .",
+    "package": "cd ./dist && electron-packager ./ --platform=darwin --arch=x64 --out=package --overwrite=force --ignore=dist"
   },
   "dependencies": {
     "core-js": "^2.6.5",
@@ -22,8 +24,10 @@
     "@vue/cli-plugin-eslint": "^3.8.0",
     "@vue/cli-service": "^3.8.0",
     "babel-eslint": "^10.0.1",
+    "electron-packager": "^14.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "nodemon": "^1.19.1",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
