--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   },
   "main": "background.js",
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "electron": "^5.0.6",
     "electron-window-state": "^5.0.3",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.4",
     "vue-router": "^3.0.6",
     "vuetify": "^1.5.16",
     "vuex": "^3.1.1"
@@ -28,7 +30,7 @@
     "@vue/cli-plugin-eslint": "^3.8.0",
     "@vue/cli-service": "^3.8.0",
     "babel-eslint": "^10.0.1",
-    "electron": "^5.0.0",
+    "electron": "^5.0.6",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "nodemon": "^1.19.1",
